--- a/Coursework-DPSAA.vcxproj.filters
+++ b/Coursework-DPSAA.vcxproj.filters
@@ -38,8 +38,11 @@
     <None Include=".clang-format">
       <Filter>GitHub</Filter>
     </None>
-    <None Include="testBase2.dat">
-      <Filter>Файлы ресурсов</Filter>
-    </None>
+    <None Include="testBase2.dat" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\structures.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
